--- a/test/README
+++ b/test/README
@@ -4,24 +4,24 @@
 
 # start from scratch and initialize dat1
 cd dat1
-./main --init true
+./escd --init true
 # wait for the first block to finish
 
 # add dat2 to network
 cd ../dat2
-./main -m 1 -f 1
+./escd -m 1 -f 1
 
 # add dat3 to network
 cd ../dat3
-./main -m 1 -f 1
+./escd -m 1 -f 1
 # stop dat3 by pressing '.' + enter
 
 # restart dat3 from last state
-./main -m 1
+./escd -m 1
 # stop dat3 by pressing '.' + enter
 
 # start dat3 from current network state
-rm msid.txt ; ./main -m 1 -f 1
+rm msid.txt ; ./escd -m 1 -f 1
 # stop dat3 by pressing '.' + enter
 
 
@@ -29,4 +29,8 @@ rm msid.txt ; ./main -m 1 -f 1
 
 # get status of user 1_0
 cd ../u1_0
-./user -e ME::
+./esc -e ME::
+
+# erase data
+rm -rf blk/ inx/ log/ log.txt msid.txt ofi/ usr/ vip/
+
